--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serde = { version = "1.0.219", features = ["derive"] }
 anyhow = "1.0.98"
 indicatif = "0.17.11"
 path-absolutize = "3.1.1"
+tokio = { version = "1.45.1", features = ["full"] }
+futures = "0.3.31"
