--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ git2 = "0.20.2"
 toml = "0.8.23"
 serde = { version = "1.0.219", features = ["derive"] }
 anyhow = "1.0.98"
-indicatif = "0.17.11"
+indicatif = "0.18.0"
+regex = "1.11.2"
 path-absolutize = "3.1.1"
 tokio = { version = "1.45.1", features = ["full"] }
 futures = "0.3.31"
+portable-pty = "0.9.0"
